<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ygl.piggylife.notebook.CategoryEdit"
    android:orientation="vertical">


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="70dp">

        <TextView
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ce_type"
            android:id="@+id/textView3"
            android:gravity="center" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/tv_ce_notetype"
            android:gravity="center_horizontal|left"
            android:textColor="#135c15" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="70dp">

        <TextView
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ce_name"
            android:id="@+id/textView4"
            android:gravity="center" />

        <EditText
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:id="@+id/et_ce_name" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="120dp">

        <TextView
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ce_description"
            android:id="@+id/textView5"
            android:gravity="center" />

        <EditText
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/et_ce_description" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:text="@string/ce_btn_update"
            android:id="@+id/btn_ce_update"
            android:visibility="gone" />

        <Button
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:text="@string/ce_btn_return"
            android:id="@+id/btn_ce_return" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView2" />
</LinearLayout>
