<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ygl.piggylife.notebook.Login">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center_horizontal|bottom">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                android:layout_marginBottom="10dp" />
            </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:gravity="center">

            <TextView
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:gravity="center|right"
                android:text="@string/login_username"
                android:paddingRight="30dp" />
            <EditText
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:id="@+id/login_username" />
            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:gravity="center">

            <TextView
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:gravity="center|right"
                android:text="@string/login_password"
                android:paddingRight="30dp" />
            <EditText
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:id="@+id/login_password"
                android:inputType="textPassword" />
            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal">

            <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_btn_login"
            android:id="@+id/login_go"
            android:layout_marginTop="30dp"
            android:width="200dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_btn_register"
                android:id="@+id/btn_login_register"
                android:layout_marginTop="20dp"
                android:width="200dp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
