<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ygl.piggylife.notebook.RegisterActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/register_tv_title"
            android:id="@+id/tv_register_title"
            android:gravity="center|left"
            android:textStyle="bold" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <TextView
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/register_tv_username"
                android:id="@+id/textView"
                android:gravity="center|right"
                android:paddingRight="30dp" />

            <EditText
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:id="@+id/et_register_username" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="70dp">

            <TextView
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/register_tv_password"
                android:id="@+id/textView2"
                android:gravity="center|right"
                android:paddingRight="30dp" />

            <EditText
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/et_register_password" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="70dp">

            <TextView
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/register_tv_confirm_password"
                android:id="@+id/textView3"
                android:gravity="center|right"
                android:paddingRight="30dp" />

            <EditText
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/et_register_confirm_password" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="center|top"
            android:paddingTop="20dp">

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/register_btn_go"
                android:id="@+id/btn_register_go" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
