<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ygl.piggylife.notebook.HomeActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textView" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="140dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/home_tv_cmc"
                android:id="@+id/tv_cmc"
                android:gravity="center" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                 <TextView
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="0"
                    android:id="@+id/home_tv_cur_month_cost"
                     android:textColor="#1aa519"
                    android:textSize="@android:dimen/app_icon_size"
                     android:layout_weight="4"
                     android:gravity="center" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="160dp"
            android:gravity="center">

            <Button
                android:layout_width="180dp"
                android:layout_height="60dp"
                android:text="@string/home_btn_addnote"
                android:id="@+id/btn_add_note"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textView4" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="bottom">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_category_manager"
                android:id="@+id/btn_home_categorymgr"
                android:layout_weight="1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_query"
                android:id="@+id/btn_home_latestnotes"
                android:layout_weight="1" />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
